# AdventOfCode_2024

./: .gitignore  AdventOfCode2024.cabal  LICENSE  README.md
day01/: solution.hs
day02/: solution.hs
day03/: solution.hs
libs/: MyUtils.hs
templates/: solution.hs
